# visage

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: audit.yml  ci.yml
contrib/hw/: 04f2-b6d9.toml  174f-2454.toml  30c9-00c2.toml  30c9-0120.toml  README.md
crates/pam-visage/: Cargo.toml  build.rs
crates/pam-visage/src/: lib.rs
crates/visage-cli/: Cargo.toml
crates/visage-cli/src/: main.rs
crates/visage-core/: Cargo.toml
crates/visage-core/src/: alignment.rs  detector.rs  lib.rs  liveness.rs  recognizer.rs  types.rs
crates/visage-hw/: Cargo.toml
crates/visage-hw/src/: camera.rs  frame.rs  ir_emitter.rs  lib.rs  quirks.rs
crates/visaged/: Cargo.toml
crates/visaged/src/: config.rs  dbus_interface.rs  engine.rs  main.rs  store.rs
docs/: STATUS.md  STRATEGY.md  architecture.md  hardware-compatibility.md  operations-guide.md  threat-model.md
docs/decisions/: 001-camera-capture-pipeline.md  003-daemon-integration.md  003-inference-pipeline-implementation.md  004-inference-pipeline-implementation.md  005-pam-system-bus-migration.md  006-ir-emitter-integration.md  007-ubuntu-packaging.md  008-hardware-compatibility-detection.md  009-onnx-model-integrity-verification.md  010-open-source-contribution-governance.md  012-post-launch-stabilization-v0.3.2-v0.3.3.md
docs/hardware-reports/: asus-expertbook-b3302fea-13d3-56ea.md
docs/marketing/: distribution-strategy.md
docs/research/: architecture-review-and-roadmap.md  domain-audit.md  howdy-analysis-and-visage-design.md
models/: README.md
packaging/aur/: PKGBUILD  visage.install
packaging/dbus/: org.freedesktop.Visage1.conf
packaging/debian/: pam-auth-update  postinst  postrm  prerm
packaging/nix/: default.nix  module.nix
packaging/systemd/: visaged.service
scripts/: quickstart.sh
