[workspace]
resolver = "2"
members = [
    "crates/visaged",
    "crates/pam-visage",
    "crates/visage-cli",
    "crates/visage-core",
    "crates/visage-hw",
    "crates/visage-models",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sovren-software/visage"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# D-Bus IPC
zbus = "5"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
thiserror = "2"
anyhow = "1"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"

# Identity / time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Image processing
image = "0.25"

# ONNX inference
ort = "2.0.0-rc.11"
ndarray = "0.17"

# Cryptography (embedding encryption)
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

# FFI / system
libc = "0.2"
nix = "0.31"
