[workspace]
resolver = "2"
members = [
    "crates/visaged",
    "crates/pam-visage",
    "crates/visage-cli",
    "crates/visage-core",
    "crates/visage-hw",
    "crates/visage-models",
]

[workspace.package]
version = "0.3.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/sovren-software/visage"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# D-Bus IPC.
# Pin to the tokio executor and disable the default `async-io` feature (zbus's
# own recommendation for tokio integration). `visaged` awaits tokio primitives
# (mpsc/oneshot/Mutex) from inside `#[zbus::interface]` handlers; leaving zbus on
# its default async-io executor makes any reactor-bound tokio call (e.g. a future
# `tokio::time`) panic with "no reactor running". Keeping this on tokio also
# prevents a transitive dep from silently reverting the whole process to async-io
# via Cargo feature unification. `pam-visage` re-adds `blocking-api` for its
# synchronous proxy (it drives zbus's internal tokio runtime via `block_on`).
zbus = { version = "5", default-features = false, features = ["tokio"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"

# Error handling
thiserror = "2"
anyhow = "1"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"

# Identity / time
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Image processing
image = "0.25"

# ONNX inference
ort = "2.0.0-rc.11"
ndarray = "0.17"

# Cryptography (embedding encryption)
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

# FFI / system
libc = "0.2"
nix = "0.31"
