[package]
name = "visage-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Visage CLI — enroll, verify, test, diagnostics"

[[bin]]
name = "visage"
path = "src/main.rs"

[dependencies]
visage-hw = { path = "../visage-hw" }
image = { workspace = true }
zbus = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
