[package]
name = "visage-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Visage core — face detection (SCRFD) and recognition (ArcFace) via ONNX"

[dependencies]
ort = { workspace = true }
ndarray = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
