[package]
name = "visage-hw"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Visage hardware abstraction — camera capture and IR emitter control"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
