[package]
name = "visaged"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Visage biometric authentication daemon"

[[bin]]
name = "visaged"
path = "src/main.rs"

[dependencies]
visage-core = { path = "../visage-core" }
visage-hw = { path = "../visage-hw" }
tokio = { workspace = true }
zbus = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
